more css styling,attempting to fix some of the asset spacing

--- a/src/app/user-info/user-info.component.css
+++ b/src/app/user-info/user-info.component.css
@@ -23,3 +23,6 @@ input{
   padding-right: 32px;
   font-size: 12px;
 }
+.icons{
+  text-align: center;
+}
