--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 300;
+  background-color: #e6ecf0;
 }
 .me-irl{
   text-align: center;
